# MMFi_dataset

./: .gitignore  README.md  config.yaml  decoder_config_test.py  example.py  mmfi.py  modality.py  pyproject.toml
mmfi_dataset/: decode_config.py  mmfi.py  modality.py
mmfi_lib/: mmfi.py
